tests/ui/traits/next-solver/assembly/runaway-impl-candidate-selection.stderr
error[E0284]: type annotations needed: cannot normalize `<_ as Iterator>::Item`
  --> $DIR/runaway-impl-candidate-selection.rs:13:22
   |
LL |     println!("{:?}", iter::<_>());
   |                      ^^^^^^^^^^^ cannot normalize `<_ as Iterator>::Item`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
